--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
+    background-color: "#ffffff";
+    background: "imagenes/fondo.png";
+    background-size: "auto 100%";
 }
+
+*{
+  box-sizing: border-box;
+}
+
+
 .navbar{
     overflow: hidden;
     background-color: #24225f;
 }
 
-.navbar a {
+.navbar a{
     float: right;
     font-size: 16px;
     color: #ffffff;
@@ -15,11 +24,11 @@ body{
     text-decoration: none;
 }
 
-.navbar img {
+.navbar img{
     float: left;
     top: 0px;
-    left: 0px;
-    padding: 14px 16px;
+    right: 0px;
+    padding: 0px 0px;
 }
 
 .dropdown{
@@ -41,6 +50,7 @@ body{
 
 .navbar a:hover, .dropdown:hover .dropbtn{
     background-color: #5a5979;
+    transition: 0.7s;
 }
 
 .dropdown-content{
@@ -53,20 +63,40 @@ body{
 .dropdown-content a{
     float: none;
     color: #ffffff;
-    padding: 12px 16px;
+    padding: 14px 16px;
     text-align: left;
     display: block;
 }
 
 .dropdown-content a:hover{
     background-color: #5a5979;
+    transition: 0.7s;
 }
 
 .dropdown:hover .dropdown-content{
     display: block;
 }
 
-.btn-group .barButton{
+.column{
+    float: left;
+    padding: 10px;
+}
+
+.column.side{
+    width: 25%;
+}
+
+.column.middle{
+    width: 75%;
+}
+
+.row::after{
+    content:"";
+    display: table;
+    clear: both;
+}
+
+/* .btn-group .barButton{
     background-color: #24225f;
     border: none;
     color:white;
@@ -76,10 +106,10 @@ body{
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
-    float: left;
 }
 
 .btn-group .barButton:hover{
     background-color:#5a5979;
     transition: 0.7s;
-}
+} */
+
