--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body{
 }
 
 *{
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -15,20 +17,26 @@ body{
     background-color: #24225f;
 }
 
-.navbar a{
+.navbar #button{
     float: right;
     font-size: 16px;
     color: #ffffff;
     text-align: center;
-    padding: 14px 16px;
+    padding: 17px 17px;
     text-decoration: none;
 }
 
 .navbar img{
     float: left;
-    top: 0px;
-    right: 0px;
-    padding: 0px 0px;
+    position: relative;
+    display: block;
+    margin: 0;
+    height: 100%;
+    max-height: 43px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding-left: 20px;
+    border: none;
 }
 
 .dropdown{
@@ -38,17 +46,17 @@ body{
 
 .dropdown .dropbtn{
     font-size: 16px;
-    border: none;
     background-color: #24225f;
+    border: none;
     color: #ffffff;
     font-family: inherit;
     text-align: center;
     margin: 0;
-    padding: 14px 16px;
+    padding: 17px 17px;
     cursor: pointer;
 }
 
-.navbar a:hover, .dropdown:hover .dropbtn{
+.navbar #button:hover, .dropdown:hover .dropbtn{
     background-color: #5a5979;
     transition: 0.7s;
 }
@@ -66,6 +74,9 @@ body{
     padding: 14px 16px;
     text-align: left;
     display: block;
+    text-decoration: none;
+    border-style: solid;
+    border-color: #5a5979;
 }
 
 .dropdown-content a:hover{
@@ -88,6 +99,7 @@ body{
 
 .column.middle{
     width: 75%;
+
 }
 
 .row::after{
@@ -96,20 +108,44 @@ body{
     clear: both;
 }
 
-/* .btn-group .barButton{
-    background-color: #24225f;
-    border: none;
-    color:white;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
+.flexbox{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    
 }
 
-.btn-group .barButton:hover{
-    background-color:#5a5979;
-    transition: 0.7s;
-} */
+.flexbox > div {
+    margin: 10px;
+    align-content:center;
+}
 
+#textblock{
+    background-color: #5a5979;
+    border-radius: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+    width: 100%;
+}
+
+footer {
+    background-color: #24225f;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    }
+
+#paragraph{
+    text-align: center;
+    max-width: 70%;
+    margin: 40px auto;
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    margin-bottom: 40px;
+    border-radius: 8px;
+    font-size: 22px;
+}
