--- a/style.css
+++ b/style.css
@@ -190,3 +190,19 @@ footer {
     font-size: 22px;
     box-shadow: 2px 2px 1px black;
 }
+
+details > summary{
+    font-size: 36px;
+    padding: 4px;
+    background-color: #eeeeee;
+    border: none;
+    box-shadow: 1px 1px 2px #bbbbbb;
+    cursor: pointer;
+}
+
+details > p{
+    background-color: #eeeeee;
+    padding: 4px;
+    margin: 0;
+    box-shadow: 1px 1px 2px #bbbbbb;
+}
