--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ footer {
 }
 
 details > summary{
-    font-size: 36px;
+    font-size: 20px;
     padding: 4px;
     background-color: #eeeeee;
     border: none;
@@ -205,4 +205,159 @@ details > p{
     padding: 4px;
     margin: 0;
     box-shadow: 1px 1px 2px #bbbbbb;
+}
+
+!contacto y Direccion
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: #24225f;
+    color: #fff;
+    padding: 40px;
+    margin-top: 10px;
+    text-align: center;
+}
+
+main {
+    max-width: 800px;
+    margin: 40px auto;
+    padding: 0 20px;
+}
+
+section {
+    margin-bottom: 40px;
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.zoom-section {
+    font-family: Arial, Helvetica, sans-serif;
+    background: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    margin: 50px auto;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.zoom-section:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+}
+        
+form label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+form input,form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+form button {
+    background-color: #24225f;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: #24225f;
+}
+
+footer {
+    background-color: #24225f;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+}
+        
+.mapa iframe {
+    width: 100%;
+    border-radius: 8px;
+}
+
+.mi-imagen {
+    width: 400px;
+    height: 300px;
+    object-fit:cover;
+}
+!-Icono de Acordeón
+
+.acordeon-container {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.item {
+    background: #ffffff;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.501);
+    overflow: hidden;
+    transition: all 0.3s ease;
+}
+
+.title {
+    display: flex;
+    align-items: center;
+    padding: 15px 20px;
+    cursor: pointer;
+}
+
+.title:hover {
+    background: #e9f1fb;
+}
+
+.bullet {
+    color: #24225f;
+    font-size: 18px;
+    margin-right: 12px;
+    transition: transform 0.3s ease;
+}
+
+.title h3 {
+    margin: 0;
+    font-size: 18px;
+    color: #000000;
+}
+
+.content {
+    max-height: 0;
+    overflow: hidden;
+    padding: 0 20px;
+    background: #f9f9f9;
+    transition: max-height 0.4s ease, padding 0.3s ease;
+}
+
+.content p {
+    margin: 15px 0;
+    color: #000000;
+    line-height: 1.5;
+}
+
+.item:hover .content {
+    max-height: 200px;
+    padding: 15px 20px;
+}
+
+.item:hover .bullet {
+    transform: rotate(90deg);
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
