--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ footer {
 .mi-imagen {
     width: 400px;
     height: 300px;
-    object-fit:cover;
+   /*  object-fit:cover; */
 }
 !-Icono de Acordeón
 
